libs/stringtable/tests/snapshots/rapify__rapify_containers.snap
---
source: libs/stringtable/tests/rapify.rs
expression: rapify.unwrap()
---
XmlbLayout {
    header: [
        66,
        76,
        77,
        88,
    ],
    languages: [
        27,
        0,
        0,
        0,
        69,
        110,
        103,
        108,
        105,
        115,
        104,
        0,
        67,
        122,
        101,
        99,
        104,
        0,
        70,
        114,
        101,
        110,
        99,
        104,
        0,
        83,
        112,
        97,
        110,
        105,
        115,
        104,
        0,
        73,
        116,
        97,
        108,
        105,
        97,
        110,
        0,
        80,
        111,
        108,
        105,
        115,
        104,
        0,
        80,
        111,
        114,
        116,
        117,
        103,
        117,
        101,
        115,
        101,
        0,
        82,
        117,
        115,
        115,
        105,
        97,
        110,
        0,
        71,
        101,
        114,
        109,
        97,
        110,
        0,
        75,
        111,
        114,
        101,
        97,
        110,
        0,
        74,
        97,
        112,
        97,
        110,
        101,
        115,
        101,
        0,
        67,
        104,
        105,
        110,
        101,
        115,
        101,
        0,
        67,
        104,
        105,
        110,
        101,
        115,
        101,
        115,
        105,
        109,
        112,
        0,
        84,
        117,
        114,
        107,
        105,
        115,
        104,
        0,
        83,
        119,
        101,
        100,
        105,
        115,
        104,
        0,
        83,
        108,
        111,
        118,
        97,
        107,
        0,
        83,
        101,
        114,
        98,
        111,
        67,
        114,
        111,
        97,
        116,
        105,
        97,
        110,
        0,
        78,
        111,
        114,
        119,
        101,
        103,
        105,
        97,
        110,
        0,
        73,
        99,
        101,
        108,
        97,
        110,
        100,
        105,
        99,
        0,
        72,
        117,
        110,
        103,
        97,
        114,
        105,
        97,
        110,
        0,
        71,
        114,
        101,
        101,
        107,
        0,
        70,
        105,
        110,
        110,
        105,
        115,
        104,
        0,
        68,
        117,
        116,
        99,
        104,
        0,
        85,
        107,
        114,
        97,
        105,
        110,
        105,
        97,
        110,
        0,
        68,
        97,
        110,
        105,
        115,
        104,
        0,
        66,
        117,
        108,
        103,
        97,
        114,
        105,
        97,
        110,
        0,
        76,
        97,
        116,
        105,
        110,
        0,
    ],
    offsets: [
        27,
        0,
        0,
        0,
        106,
        1,
        0,
        0,
        106,
        1,
        0,
        0,
        106,
        1,
        0,
        0,
        106,
        1,
        0,
        0,
        106,
        1,
        0,
        0,
        106,
        1,
        0,
        0,
        106,
        1,
        0,
        0,
        106,
        1,
        0,
        0,
        130,
        1,
        0,
        0,
        106,
        1,
        0,
        0,
        106,
        1,
        0,
        0,
        106,
        1,
        0,
        0,
        106,
        1,
        0,
        0,
        106,
        1,
        0,
        0,
        106,
        1,
        0,
        0,
        106,
        1,
        0,
        0,
        106,
        1,
        0,
        0,
        106,
        1,
        0,
        0,
        106,
        1,
        0,
        0,
        106,
        1,
        0,
        0,
        106,
        1,
        0,
        0,
        106,
        1,
        0,
        0,
        106,
        1,
        0,
        0,
        106,
        1,
        0,
        0,
        106,
        1,
        0,
        0,
        106,
        1,
        0,
        0,
        106,
        1,
        0,
        0,
    ],
    keys: [
        4,
        0,
        0,
        0,
        65,
        52,
        0,
        65,
        53,
        0,
        65,
        49,
        0,
        65,
        50,
        0,
    ],
    translations: [
        [
            4,
            0,
            0,
            0,
            79,
            114,
            105,
            103,
            105,
            110,
            0,
            69,
            78,
            0,
            79,
            114,
            105,
            103,
            105,
            110,
            0,
            69,
            78,
            0,
        ],
        [
            4,
            0,
            0,
            0,
            79,
            114,
            105,
            103,
            105,
            110,
            0,
            68,
            69,
            0,
            79,
            114,
            105,
            103,
            105,
            110,
            0,
            68,
            69,
            0,
        ],
    ],
}
